# SnakeScreen

./: .gitignore  LICENSE  README.md  electron-main.js  forge.config.js  forge.config.ts  index.html  nt-specification.md  ntclient.js  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsconfig.json.bak  vite.main.config.ts
.github/workflows/: main.yml
app/: IPAddresses.js  IPAddresses.js.map  NT4.js  NT4.js.map  Preferences.js.map  index.html  main copy.js  main copy.js.map  main.js  main.js.map  nt.js  nt.js.map  preload.js  preload.js.map  renderer.js  renderer.js.map
app/nt4/: NT4.js  NT4.js.map  NT4Publisher.js  NT4Publisher.js.map  NT4Source.js  NT4Source.js.map  NT4Tuner.js  NT4Tuner.js.map
copper_console/: copper_console.py
images/: snakeiconmmaroonwhite.icns  snakelogodropshadow.icns  snakelogoicon.icns
ntspoofer/: README.md  robot.py  simgui-window.json  simgui.json
public/: electron.js  index.html  manifest.json  updater.js
src/: ActionQueue.tsx  App.tsx  Autonomy.tsx  ConnectionStatus.tsx  GPIndicator.tsx  GPToggle.tsx  IPAddresses.ts  NT4.ts  Preferences.ts  Reef.tsx  ScoringHeight.tsx  Settings.tsx  index.tsx  interface.d.ts  main copy.ts  main.ts  preload.ts  renderer.ts  stationToggle.tsx
src/nt4/: NT4.ts  NT4Publisher.ts  NT4Source.ts  NT4Tuner.ts  README.md
