[tool.poetry]
name = "copper-console"
version = "0.1.0"
description = "Enhanced field vision for drivers"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
robotpy = "^2024.1.1.2"
pygame-ce = "2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
